fix some header hover

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -40,7 +40,7 @@ header a {
   text-align: center;
   padding: 10px;
   text-decoration: none;
-  font-size: 30px;
+  font-size: 20px;
   line-height: 15px;
 }
 /* Last item in Header  */
@@ -51,24 +51,23 @@ header a:nth-child(5) {
 }
 header a:nth-child(5):hover {
   color: #551A8B;
-  font-size: 25px;
- 
+  font-size: 25;
 }
 header i:last-child:hover{
-  font-size: 25px;
+  font-size: 30px;
  
 }
 /* Style the logo link (notice that we set the same value of line-height and font-size to prevent the header to increase when the font gets bigger */
 header a.logo {
   font-weight: bold;
-  font-size: 30px;
+  font-size: 25px;
 }
 
 /* Change the background color on mouse-over */
 header a:hover {
   background-color: none;
   color: #f1a839;
-  font-size: 25px;
+  font-size: 20px;
    font-weight: bold;
 }
 
