--- a/assets/partials/cvResume.html
+++ b/assets/partials/cvResume.html
@@ -157,7 +157,7 @@
         <!-- End Page Container -->
     </div>
 
-    <footer class="w3-container w3-teal w3-center w3-margin-top">
+    <!-- <footer class="w3-container w3-teal w3-center w3-margin-top">
         <p>Find me on social media.</p>
         <i class="fa fa-facebook-official w3-hover-opacity"></i>
         <i class="fa fa-instagram w3-hover-opacity"></i>
@@ -166,7 +166,7 @@
         <i class="fa fa-twitter w3-hover-opacity"></i>
         <i class="fa fa-linkedin w3-hover-opacity"></i>
         <p>Powered by <a href="https://www.w3schools.com/w3css/default.asp" target="_blank">w3.css</a></p>
-    </footer>
+    </footer> -->
 
 </body>
 
